[package]
name = "roltdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6"
fnv = "1.0.3"
page_size = "0.4.1"
memmap = "0.7.0"
anyhow = "1.0"
thiserror = "1.0"
fs2 = "0.4.3"
memoffset = "^0.5.4"